@@ -1,9 +1,9 @@
 package com.ceos20.instagram_clone.domain.chat.service;
 
-import com.ceos20.instagram_clone.domain.chat.dto.request.ChatroomReq;
-import com.ceos20.instagram_clone.domain.chat.dto.request.MessageReq;
-import com.ceos20.instagram_clone.domain.chat.dto.response.ChatroomRes;
-import com.ceos20.instagram_clone.domain.chat.dto.response.MessageRes;
+import com.ceos20.instagram_clone.domain.chat.dto.request.ChatroomRequestDto;
+import com.ceos20.instagram_clone.domain.chat.dto.request.MessageRequestDto;
+import com.ceos20.instagram_clone.domain.chat.dto.response.ChatroomResponseDto;
+import com.ceos20.instagram_clone.domain.chat.dto.response.MessageResponseDto;
 import com.ceos20.instagram_clone.domain.chat.entity.Chatroom;
 import com.ceos20.instagram_clone.domain.chat.entity.Message;
 import com.ceos20.instagram_clone.domain.member.entity.Member;
@@ -31,82 +31,92 @@ public class ChatService {
     private final MemberRepository memberRepository;
 
     public Member findMemberById(Long memberId) {
-        return memberRepository.findById(memberId).orElseThrow(() -> new BadRequestException(NOT_FOUND_MEMBER_ID));
+        return memberRepository.findByIdAndDeletedAtIsNull(memberId).orElseThrow(() -> new BadRequestException(NOT_FOUND_MEMBER_ID));
     }
 
     public Chatroom findChatroomById(Long chatroomId) {
-        return chatroomRepository.findById(chatroomId).orElseThrow(() -> new BadRequestException(NOT_FOUND_CHATROOM_ID));
+        return chatroomRepository.findByIdAndDeletedAtIsNull(chatroomId).orElseThrow(() -> new BadRequestException(NOT_FOUND_CHATROOM_ID));
     }
 
     /**
      * 채팅방 생성
      * **/
     @Transactional
-    public ChatroomRes createChatroom(ChatroomReq request) {
+    public ChatroomResponseDto createChatroom(ChatroomRequestDto request, Long senderId) {
 
-        Member sender = findMemberById(request.senderId());
+        Member sender = findMemberById(senderId);
         Member receiver = findMemberById(request.receiverId());
 
-        Optional<Chatroom> existChatroom = chatroomRepository.findBySenderAndReceiver(sender, receiver);
+        Optional<Chatroom> existChatroom = chatroomRepository.findBySenderAndReceiverAndDeletedAtIsNull(sender, receiver);
         if (existChatroom.isPresent()) {
             throw new BadRequestException(VALID_CHATROOM);
         }
 
         Chatroom chatroom = chatroomRepository.save(request.toEntity(sender, receiver));
-        return ChatroomRes.of(chatroom);
+
+        MessageRequestDto message = new MessageRequestDto(request.content());
+        MessageResponseDto firstMessage = createMessage(message, chatroom.getId(), senderId);
+
+        return ChatroomResponseDto.from(chatroom, firstMessage);
     }
 
     /**
      * 메세지 전송
      * **/
     @Transactional
-    public MessageRes createMessage(MessageReq request) {
+    public MessageResponseDto createMessage(MessageRequestDto request, Long chatroomId, Long senderId) {
 
-        Member sender = findMemberById(request.senderId());
-        Chatroom chatroom = findChatroomById(request.chatroomId());
+        Member sender = findMemberById(senderId);
+        Chatroom chatroom = findChatroomById(chatroomId);
 
         Message message = messageRepository.save(request.toEntity(sender, chatroom));
-        return MessageRes.of(message);
+        return MessageResponseDto.from(message);
     }
 
     /**
      * 채팅방 내 디엠 조회
      * **/
-    public List<MessageRes> getMessageInChatroom(Long chatroomId) {
+    public List<MessageResponseDto> getMessageInChatroom(Long chatroomId, Long memberId) {
 
         Chatroom chatroom = findChatroomById(chatroomId);
-        List<Message> messages = messageRepository.findAllByChatroom(chatroom);
+        Member member = findMemberById(memberId);
+
+        if (!chatroom.getSender().equals(member) && !chatroom.getReceiver().equals(member)) {
+            throw new BadRequestException(INVALID_CHATROOM_AUTHORITY);
+        }
+
+        List<Message> messages = messageRepository.findAllByChatroomAndDeletedAtIsNullOrderBySendTimeAsc(chatroom);
 
         return messages.stream()
-                .map(MessageRes::of)
-                .collect(Collectors.toList());
+                .map(MessageResponseDto::from)
+                .toList();
     }
 
     /**
      * 1:1 채팅방 조회
      * **/
-    public ChatroomRes getChatroom(Long senderId, Long receiverId) {
+    public ChatroomResponseDto getChatroom(Long senderId, Long receiverId) {
 
         Member sender = findMemberById(senderId);
         Member receiver = findMemberById(receiverId);
 
-        Chatroom chatroom = chatroomRepository.findBySenderAndReceiver(sender, receiver)
+        Chatroom chatroom = chatroomRepository.findChatroomByMembers(sender, receiver)
                 .orElseThrow(() -> new BadRequestException(INVALID_CHATROOM));
 
-        return ChatroomRes.of(chatroom);
+        return ChatroomResponseDto.from(chatroom);
     }
 
     /**
      * 내가 참여한 모든 채팅방 리스트 조회
      * **/
-    public List<ChatroomRes> getMyChatroomList(Long memberId) {
+    public List<ChatroomResponseDto> getMyChatroomList(Long memberId) {
 
         Member member = findMemberById(memberId);
 
-        List<Chatroom> chatrooms = chatroomRepository.findAllBySenderOrReceiver(member, member);
+        List<Chatroom> chatrooms = chatroomRepository.findAllBySenderOrReceiverAndDeletedAtIsNull(member, member);
 
         return chatrooms.stream()
-                .map(ChatroomRes::of)
-                .collect(Collectors.toList());
+                .map(ChatroomResponseDto::from)
+                .toList();
     }
 }
