@@ -3,16 +3,14 @@ package com.ceos20.instagram_clone.domain.post.dto.response;
 import com.ceos20.instagram_clone.domain.post.entity.Image;
 import com.ceos20.instagram_clone.domain.post.entity.Post;
 import com.fasterxml.jackson.annotation.JsonInclude;
-import jakarta.validation.constraints.NotNull;
 import lombok.Builder;
 
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Builder
 @JsonInclude(JsonInclude.Include.NON_NULL)
-public record PostRes(
+public record PostResponseDto(
 
         Long postId,
 
@@ -29,8 +27,8 @@ public record PostRes(
         int commentCount
 
 ) {
-    public static PostRes createPostRes(Post post) {
-        return PostRes.builder()
+    public static PostResponseDto from(Post post) {
+        return PostResponseDto.builder()
                 .postId(post.getId())
                 .content(post.getContent())
                 .location(post.getLocation())
@@ -38,20 +36,7 @@ public record PostRes(
                 .memberId(post.getMember().getId())
                 .imageUrls(post.getImages().stream()
                         .map(Image::getImageUrl)
-                        .collect(Collectors.toList()))
-                .build();
-    }
-
-    public static PostRes getPostRes(Post post) {
-        return PostRes.builder()
-                .postId(post.getId())
-                .content(post.getContent())
-                .location(post.getLocation())
-                .music(post.getMusic())
-                .memberId(post.getMember().getId())
-                .imageUrls(post.getImages().stream()
-                        .map(Image::getImageUrl)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .commentCount(post.getCommentCount())
                 .build();
     }
